--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
       <div class="projects-grid">
         <article class="project-card" role="article">
           <h3>Project One</h3>
-          <img src="/api/placeholder/300/200" alt="Project One Preview" loading="lazy">
+          <img src="/assets/amazon.jpg" alt="Project One Preview" loading="lazy">
           <p>A brief description of project one.</p>
           <a href="#" class="project-link">View Details</a>
         </article>
         <article class="project-card" role="article">
           <h3>Project Two</h3>
-          <img src="/api/placeholder/300/200" alt="Project Two Preview" loading="lazy">
+          <img src="/assets/google.png" alt="Project Two Preview" loading="lazy">
           <p>A brief description of project two.</p>
           <a href="#" class="project-link">View Details</a>
         </article>
         <article class="project-card" role="article">
           <h3>Project Three</h3>
-          <img src="/api/placeholder/300/200" alt="Project Three Preview" loading="lazy">
+          <img src="/assets/meta.png" alt="Project Three Preview" loading="lazy">
           <p>A brief description of project three.</p>
           <a href="#" class="project-link">View Details</a>
         </article>
