--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
   </div>
 
   <main id="main-content" class="hidden" tabindex="-1">
+
+    <nav>
+
+    </nav>
+
     <header class="hero" id="hero">
       <div class="hero-content">
         <h1><span data-text="Welcome to My Futuristic Portfolio">Welcome to My Futuristic Portfolio</span></h1>
@@ -36,7 +41,7 @@
       <div class="content-wrapper">
         <h2 id="about-title">About Me</h2>
         <p>
-          I am a creative coder and front-end developer with a passion for futuristic design and immersive animations. My work blends technology and art to create mesmerizing web experiences.
+          Hello! I am Thomas a 18 years old creative coder and front-end developer with a passion for game and futuristic design and immersive animations. My work blends technology and art to create mesmerizing web experiences.
         </p>
         <div class="animated-icons" aria-label="Decorative animated icons">
           <span class="icon icon-rotate" aria-hidden="true">🚀</span>
@@ -52,19 +57,19 @@
         <article class="project-card" role="article">
           <h3>Project One</h3>
           <img src="/assets/amazon.jpg" alt="Project One Preview" loading="lazy">
-          <p>A brief description of project one.</p>
+          <p>My first ever project (kind of easy to make).</p>
           <a href="#" class="project-link">View Details</a>
         </article>
         <article class="project-card" role="article">
           <h3>Project Two</h3>
           <img src="/assets/google.png" alt="Project Two Preview" loading="lazy">
-          <p>A brief description of project two.</p>
+          <p>This project was something else but with my friend Jeff bezos we managed to make it a billion dollar company.</p>
           <a href="#" class="project-link">View Details</a>
         </article>
         <article class="project-card" role="article">
           <h3>Project Three</h3>
           <img src="/assets/meta.png" alt="Project Three Preview" loading="lazy">
-          <p>A brief description of project three.</p>
+          <p>This is simply a sid eproject i started with Mark Zukerberg back in the days.</p>
           <a href="#" class="project-link">View Details</a>
         </article>
       </div>
@@ -109,10 +114,10 @@
     </section>
     
     <footer class="footer">
-      <p>&copy; 2025 My Portfolio</p>
+      <p>&copy; 2025 All rights reserved Thomas Boulogne</p>
       <nav aria-label="Social Media Links">
-        <a href="#" aria-label="GitHub Profile">GitHub</a>
-        <a href="#" aria-label="LinkedIn Profile">LinkedIn</a>
+        <a href="https://github.com/DevThomas0" aria-label="GitHub Profile">GitHub</a>
+        <a href="https://www.linkedin.com/in/thomas-boulogne-56205b296/" aria-label="LinkedIn Profile">LinkedIn</a>
         <a href="#" aria-label="Twitter Profile">Twitter</a>
       </nav>
     </footer>
